[gd_scene load_steps=3 format=1]

[ext_resource path="res://intance.gd" type="Script" id=1]
[ext_resource path="res://collectibles-HD.png" type="Texture" id=2]

[node name="intance" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -50.3372, 0 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 237, 607, 109, 108 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = -60.0
margin/right = 200.0
margin/bottom = -40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to main"
flat = false

[node name="Button1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = -30.0
margin/right = 200.0
margin/bottom = -10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to intance"
flat = false

[node name="Button2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "to child"
flat = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -113.0
margin/top = -106.0
margin/right = -50.0
margin/bottom = -92.0
text = "in intance"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Polygon2D" type="Polygon2D" parent="."]

z/z = -1
polygon = Vector2Array( -140, -120, 300, -120, 300, 150, -140, 150 )
uv = Vector2Array(  )
color = Color( 0.19942, 0.0623627, 0.261719, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]


